# ocpppp

./: .gitignore  CMakeLists.txt  README.MD
cmake/: ocpppp.cmake
lib/ocpppp/: reflection.hpp
src/: command.cpp  command.hpp  main.cpp
src/reflect/: reflect.cpp  reflect.hpp
tests/: cpp20.cpp  test1.cpp
